--- a/Page-3.html
+++ b/Page-3.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Youchose to go home and leave the discount cupon</h1>
-    <p></p>
+    <p>Gianni chose to go back home but while he was walking in front of a Padel court a friend called him and asked him to go and play with him, Gianni accept and they actually won the tournament! After playing Gianni spent a lot of time talking and laughing with his friends but at a certain time he need to go but the trophy was one and his friend want that it to come home with him.</p>
+    <a href="Page-6.html">Gianni leave the trophy to his friend</a>
+    <a href="Page-5.html">Gianni want take the trophy</a>
 </body>
 </html>
