--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ganni il tost interactive story</title>
 </head>
-<body>
-    <style>#d1be0f</style>
-    <h1>Gianni il tost interactive story</h1>
+<body style="background-color: darkkhaki;">
+
+    <h1>il tost interactive story</h1>
     <p>One day a toast called gianni was walking happly in the park of his small ciity, he saw a couple of littel het dogs playing together and tring to get a tiny ball into a net collocted on the trunk on a tree. After a while when gianni was nearly out of the city park he felt on something, what could it be? After he got up he realize he felt o a rock but under that rock there was a McDonadld discount cupon.
         <b>now is your turn, chose what Gianni is going to do:</b>
     </p>
