--- a/Page-2.html
+++ b/Page-2.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page 2</title>
+    <title>Page 2</title>
 </head>
 <body>
-    <h1>You chose tp get the discount cupon</h1>
-    <p></p>
+    <h1>You chose to get the discount cupon</h1>
+    <p>Gianni get the discount coupon and went immediately to McDonald where he ate a big hamburger and he drank a coke. After that big lunch he went back home but, because he ate so much and so fast, he went to sleep. When he woke up he realized that he wasn’t feeling good so he get a medicine and sat on the sofa and start watching tv, but after an hour or two he started felling very very bad.</p>
+    <a href="Page-4.html">Go to the hospital </a>
 </body>
 </html>
