--- a/Page-5.html
+++ b/Page-5.html
@@ -6,7 +6,6 @@
     <title>Page 5</title>
 </head>
 <body>
-    <p>Gianni told his friend that he wanted the trophy but he answered that he invite him so he need to take the trophy home, they continue having arguments until the late evening but at the end they started to pull and pull the trophy until it fall and broke. Gianni s’ friends look him very bad and left him alone.    </p>
-    <a href="index.html">You lose restar</a>
+   <p> Gianni decided to stay home but the more the time passed the more he felt worse and worse so after a week he felt so bad that he was obligated to go to the hospital where after two weeks he died</p> 
 </body>
 </html>
