--- a/Page-6.html
+++ b/Page-6.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 6</title>
+    <title>Page 5</title>
 </head>
 <body>
-  <p>His friend look Gianni in a lovely way and thank him. He answered that there was no problem for him and the most important concept in sport is not win or lose but the effort you put in your matches and also if you are losing 6-0 5-0 the match is still not finished and there is no reason to give up because you might win it 6-0 5-7 0-6.</p> 
-  <a href="Page-7.html">Go to the next page</a> 
+    <p>Gianni told his friend that he wanted the trophy but he answered that he invite him so he need to take the trophy home, they continue having arguments until the late evening but at the end they started to pull and pull the trophy until it fall and broke. Gianni s’ friends look him very bad and left him alone.    </p>
+    <a href="index.html">You lose restar</a>
 </body>
 </html>
