--- a/Page-4.html
+++ b/Page-4.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>The next day Gianni, woke up in the hospital in really bad condition he ate to much junk food so he had an intestinal infection. He had to do an operation but still he felt so bad that the doctor told him that he need to remain in the hospital for a couple of months.</p>
-    <a href="index.html">You lose restart</a>
+    <p>The next day Gianni, woke up in the hospital in really bad condition he ate to much junk food so he had an intestinal infection. He had to do an operation but lukly it whent so good that Gianni could have gone back home the next day!.</p>
+    <a href="Page-3.html">go back home</a>
 </body>
 </html>
