--- a/Page-7.html
+++ b/Page-7.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 7</title>
+    <title>Page 6</title>
 </head>
 <body>
-    <h2><b>congratulations
-        You finished in the correct way Gianni's story</b></h2>
+  <p>His friend look Gianni in a lovely way and thank him. He answered that there was no problem for him and the most important concept in sport is not win or lose but the effort you put in your matches and also if you are losing 6-0 5-0 the match is still not finished and there is no reason to give up because you might win it 6-0 5-7 0-6.</p> 
+  <a href="Page-7.html">Go to the next page</a> 
 </body>
 </html>
