--- a/Page-5.html
+++ b/Page-5.html
@@ -6,6 +6,7 @@
     <title>Page 5</title>
 </head>
 <body>
-   <p> Gianni decided to stay home but the more the time passed the more he felt worse and worse so after a week he felt so bad that he was obligated to go to the hospital where after two weeks he died</p> 
+   <p> Gianni decided to stay home but the more the time passed the more he felt worse and worse so after a week he felt so bad that he was obligated to go to the hospital where after two weeks he died</p>
+   <a href="index.html">You lose restart</a> 
 </body>
 </html>
