--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <b>now is your turn, chose what Gianni is going to do:</b>
     </p>
 
-<a href="Page-2.html">Get the discount cupon and go to McDonald</a>
-<a href="Page-3.html">Don't get the dicount cupon and go home </a>
+<a href="Page-2.html">Get the discount cupon and go to McDonald
+
+</a>
+<a href="Page-3.html">Don't get the dicount cupon and go home 
+    
+</a>
 </body>
 </html>
