Mr. Paolo è identico a mio cugino

--- a/Page-4.html
+++ b/Page-4.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>The next day Gianni, woke up in the hospital in really bad condition he ate to much junk food so he had an intestinal infection. He had to do an operation but lukly it whent so good that Gianni could have gone back home the next day!.</p>
+    <p>The next day Gianni, woke up in the hospital in really really bad condition he ate to much junk food so he had an intestinal infection. He had to do an operation but lukly it whent so good that Gianni could have gone back home the next day!.</p>
     <a href="Page-3.html">go back home</a>
 </body>
 </html>
